tests/fail/ch_nightly/old_formats.stderr
error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:x}
 --> $DIR/old_formats.rs:2:32
  |
2 |     sscanf::scanf!("hi", "asdf{x}asdf", usize);
  |                                ^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:b}
 --> $DIR/old_formats.rs:3:32
  |
3 |     sscanf::scanf!("hi", "asdf{b}asdf", usize);
  |                                ^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:o}
 --> $DIR/old_formats.rs:4:32
  |
4 |     sscanf::scanf!("hi", "asdf{o}asdf", usize);
  |                                ^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:r4}
 --> $DIR/old_formats.rs:5:32
  |
5 |     sscanf::scanf!("hi", "asdf{r4}asdf", usize);
  |                                ^^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:r13}
 --> $DIR/old_formats.rs:6:32
  |
6 |     sscanf::scanf!("hi", "asdf{r13}asdf", usize);
  |                                ^^^

error: It looks like you are using the old format.
       config options now require a ':' prefix like so: {:/.*/}
 --> $DIR/old_formats.rs:7:32
  |
7 |     sscanf::scanf!("hi", "asdf{/.*/}asdf", usize);
  |                                ^^^^
